syntax = "proto3";

package io.bigfast;

message Empty {}

message Channel {
    message Message {
        string id = 1;
        string channelId = 2;
        string userId = 3;
        bytes content = 4;
    }

    message Subscription {
        message Add {
            string channelId = 1;
            string userId = 2;
        }

        message Remove {
            string channelId = 1;
            string userId = 2;
        }
    }

    string id = 1;
}

// The messaging service definition.
service Messaging {
    rpc ChannelMessageStream (stream Channel.Message) returns (stream Channel.Message) {}
    rpc CreateChannel (Empty) returns (Channel) {}

    rpc SubscribeChannel (Channel.Subscription.Add) returns (Empty) {}
    rpc UnsubscribeChannel (Channel.Subscription.Remove) returns (Empty) {}
}
